server/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: docs-server
  namespace: docs-server
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  type: NodePort
  selector:
    app: docs-server
